# qa_guru_python_5_18

./: pyproject.toml
