[tool.poetry]
name = "pythonproject19"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.3.4"
selene = "2.0.0rc2"

[tool.poetry.group.dev.dependencies]
pylint = "2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
