[tool.poetry]
name = "qa-guru-python-5-18"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"
packages = [{include = "qa_guru_python_5_18"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.3.2"
selene = "2.0.0rc2"

[tool.poetry.group.dev.dependencies]
pylint = "2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
